--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,34 @@
+@import './styles/global.scss';
 
 .container { 
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 10px;
 }
 
+.primary_button {
+    font-size: 16px;
+    color: white;
+    padding: 6px;
+    border-radius: 5px;
+    border: none;
+    background-color: $primary-color;
+
+        &:hover {
+            background-color: $primary-color;
+        }
+       &:active {
+        transform: scale(0.98);
+        background-color: #0747A6;
+          }
+
+    }
+
+    .networkStatus {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        padding: 10px;
+        color: white;
+      }
