--- a/src/components/packer/PackerTable/PackerTable.module.scss
+++ b/src/components/packer/PackerTable/PackerTable.module.scss
@@ -25,3 +25,19 @@
     width: 200px;
      height: 30px;
   }
+
+  .changed {
+    background-color: green;
+  }
+  
+  .not-changed {
+    background-color: blue;
+  }
+  
+  .double {
+    background-color: red;
+  }
+  
+  .offline {
+    background-color: grey;
+  }
