add input component

--- a/src/components/shared/ui/Button/Button.module.scss
+++ b/src/components/shared/ui/Button/Button.module.scss
@@ -3,7 +3,7 @@
 .button { 
     padding: 12 6 12 6px;
     color: #FFFFFF;
-    font-family: $font-family;
+    font-family: $font-family-pro;
     font-size: 14px;
     height: 32px;
     width: auto;
