--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    font-family: $font-family;
+    font-family: $font-family-pro;
 }
 
 .primary_button {
