--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -28,3 +28,33 @@
     font-family: 'compact-semibolt';
     src: url('../assets/fonts/SFCOMPACTDISPLAY-SEMIBOLD.OTF') format('opentype');
 }
+
+@font-face {
+    font-family: 'pro-ligth';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-LIGHT.OTF');
+}
+
+@font-face {
+    font-family: 'pro-medium';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-MEDIUM.OTF');
+}
+
+@font-face {
+    font-family: 'pro-bold';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-BOLD.OTF');
+}
+
+@font-face {
+    font-family: 'pro-semibold';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-SEMIBOLD.OTF');
+}
+
+@font-face {
+    font-family: 'pro-regular';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-REGULAR.OTF');
+}
+
+@font-face {
+    font-family: 'pro-heavy';
+    src: url('../assets/fonts/SFCOMPACTDISPLAY-HEAVY.OTF');
+}
