--- a/src/components/shared/ui/Button/Button.module.scss
+++ b/src/components/shared/ui/Button/Button.module.scss
@@ -26,3 +26,11 @@
 .secondary { 
     background-color: $button-secondary-color;
 }
+
+.disabled  {
+    color: #A5ADBA;
+    background-color:#091E420A;
+    border: none;
+    outline: none;
+
+}
