--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -31,30 +31,30 @@
 
 @font-face {
     font-family: 'pro-ligth';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-LIGHT.OTF');
+    src: url('../assets/fonts/SFProDisplay-Light.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'pro-medium';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-MEDIUM.OTF');
+    src: url('../assets/fonts/SFProDisplay-Medium.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'pro-bold';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-BOLD.OTF');
+    src: url('../assets/fonts/SFProDisplay-Bold.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'pro-semibold';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-SEMIBOLD.OTF');
+    src: url('../assets/fonts//SFProDisplay-Semibold.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'pro-regular';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-REGULAR.OTF');
+    src: url('../assets/fonts/SFProDisplay-Regular.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'pro-heavy';
-    src: url('../assets/fonts/SFCOMPACTDISPLAY-HEAVY.OTF');
+    src: url('../assets/fonts/SFProDisplay-Heavy.ttf') format('ttf');
 }
