--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,9 @@
 @import './styles/global.scss';
 
 .container { 
+    width: auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    font-family: $font-family;
+    font-family:$font-family-pro;
 }
 
 .primary_button {
