--- a/src/components/packer/PackerTable/StatusCell/StatusCell.module.scss
+++ b/src/components/packer/PackerTable/StatusCell/StatusCell.module.scss
@@ -1,3 +1,4 @@
+@import "../../../../styles/global.scss";
 .changed {
     background-color: #00875A;
   }
@@ -14,6 +15,7 @@
     background-color: grey;
   }
   .default { 
+    font-family: $font-family-pro;
     margin: 0;
     width: 70px;
     min-height: 16px;
