--- a/src/components/pagination/Pagination.module.scss
+++ b/src/components/pagination/Pagination.module.scss
@@ -1,3 +1,11 @@
+.container { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .current { 
     font-size: 20px;
     color: blue;
