--- a/src/components/shared/ui/Button/Button.module.scss
+++ b/src/components/shared/ui/Button/Button.module.scss
@@ -28,9 +28,13 @@
 }
 
 .disabled  {
+    padding: 12 6 12 6px;
     color: #A5ADBA;
-    background-color:#091E420A;
+    font-family: $font-family-pro;
+    font-size: 14px;
+    height: 32px;
+    width: auto;
+    border-radius: 5px;
     border: none;
-    outline: none;
 
 }
