--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -2,11 +2,50 @@
 
 
 .container {
+  width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    justify-content:space-around;
+    justify-content: space-between;
+    gap: 5px;
     margin: 10px;
     position: relative;
+
+    .table_container{ 
+      display: flex;
+      margin-left: 114px;
+      flex-direction: column;
+      align-items: start;
+      gap: 20px;
+
+      .form_container {
+        width: 100%; 
+        max-width: auto;
+          display: flex;
+          justify-content:space-between;
+
+          .form_int_doc { 
+              display: flex;
+              gap: 20px;
+          }
+
+          .filter_container { 
+              display: flex;
+              gap: 20px;
+          }
+      }
+  
+      .form_int_doc { 
+          display: flex;
+          gap: 20px;
+      }
+
+      .paginationContainer { 
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+  
+  }
   
     .paginationContainer {
       margin-top: 10px;
@@ -31,55 +70,25 @@
     }
   
     .networkStatus {
-      position: absolute;
-      left: 20px;
-      padding: 10px;
-      color: white;
+      margin-left: 100px;
+      font-family: $font-family-ligth-compact;
+      font-weight: 100;
+      font-size: 11px;
+      display: flex;
+      width: max-content;
+      padding: 3px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      color: white;      
     }
   
-    .table_container{ 
-        width: 100%;
+   
+
+    .packer { 
         margin-top: 50px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 20px;
-
-        .form_container { 
-            width: 100%;
-            display: flex;
-            justify-content:space-between;
-
-            .form_int_doc { 
-                display: flex;
-                gap: 20px;
-            }
-
-            .filter_container { 
-                display: flex;
-                gap: 20px;
-            }
-        }
-    
-        .form_int_doc { 
-            display: flex;
-            gap: 20px;
-        }
-
-        .paginationContainer { 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    
-    }
-
-    .packer { 
-        min-width: 390px;
-        margin: 50px 0 0 ;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
     }
 
 
