--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -3,95 +3,99 @@
 
 .container {
   width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  gap: 5px;
+  margin: 10px;
+  position: relative;
+
+  .table_container {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    gap: 5px;
-    margin: 10px;
-    position: relative;
+    margin-left: 114px;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
 
-    .table_container{ 
+    .form_container {
+      width: 100%;
+      max-width: auto;
       display: flex;
-      margin-left: 114px;
-      flex-direction: column;
-      align-items: start;
+      justify-content: space-between;
+
+      .form_int_doc {
+        display: flex;
+        gap: 20px;
+      }
+
+      .filter_container {
+        display: flex;
+        gap: 20px;
+      }
+    }
+
+    .form_int_doc {
+      display: flex;
       gap: 20px;
+    }
 
-      .form_container {
-        width: 100%; 
-        max-width: auto;
-          display: flex;
-          justify-content:space-between;
-
-          .form_int_doc { 
-              display: flex;
-              gap: 20px;
-          }
-
-          .filter_container { 
-              display: flex;
-              gap: 20px;
-          }
-      }
-  
-      .form_int_doc { 
-          display: flex;
-          gap: 20px;
-      }
-
-      .paginationContainer { 
-          display: flex;
-          justify-content: center;
-          align-items: center;
-      }
-  
-  }
-  
     .paginationContainer {
-      margin-top: 10px;
-    }
-  
-    .primary_button {
-      font-size: 16px;
-      color: white;
-      padding: 6px;
-      border-radius: 5px;
-      border: none;
-      background-color: $primary-color;
-  
-      &:hover {
-        background-color: $primary-color;
-      }
-  
-      &:active {
-        transform: scale(0.98);
-        background-color: #0747A6;
-      }
-    }
-  
-    .networkStatus {
-      margin-left: 100px;
-      font-family: $font-family-ligth-compact;
-      font-weight: 100;
-      font-size: 11px;
       display: flex;
-      width: max-content;
-      padding: 3px;
       justify-content: center;
       align-items: center;
-      border-radius: 10px;
-      color: white;      
-    }
-  
-   
-
-    .packer { 
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
     }
 
-
-  
   }
-  
+
+  .paginationContainer {
+    margin-top: 20px;
+  }
+
+  .primary_button {
+    font-size: 16px;
+    color: white;
+    padding: 6px;
+    border-radius: 5px;
+    border: none;
+    background-color: $primary-color;
+
+    &:hover {
+      background-color: $primary-color;
+    }
+
+    &:active {
+      transform: scale(0.98);
+      background-color: #0747A6;
+    }
+  }
+
+  .networkStatus {
+    margin-left: 100px;
+    font-family: $font-family-ligth-compact;
+    font-weight: 100;
+    font-size: 11px;
+    display: flex;
+    width: max-content;
+    padding: 3px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    color: white;
+  }
+  .packer_container {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    .packer { 
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      margin-top: 40px;
+
+      .primaryButtonContainer {
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
+  }
+}
