add form add packer, check packer, expansion button component

--- a/src/components/packer/PackerTable/PackerTable.module.scss
+++ b/src/components/packer/PackerTable/PackerTable.module.scss
@@ -6,7 +6,7 @@
   line-height: 20px;
   color: #172B4D;
     width: 100%;
-    max-width: 870px;
+    min-width: 670px;
     overflow-x: auto;
     font-size: 14px;
     max-height: 780px;
