--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -76,7 +76,7 @@ $secondary-color: #DE350B;
 
 // Кольори кнопки
 $button-default-color: #0052CC;
-$button-secondary-color: #DE350B;
+$button-secondary-color: #EBECEE;
 $button-hover-color: #0065FF;
 $button-active-color: #0747A6;
 
