--- a/src/components/shared/ui/DropDown/DropDown.module.scss
+++ b/src/components/shared/ui/DropDown/DropDown.module.scss
@@ -1,10 +1,12 @@
 @import "../../../../styles/global.scss";
 
 .container {
+    font-family: $font-family-compact;
+    font-size: 12px;
     margin-top: 8px;
     height: auto;
     width: 210px;
     box-shadow: 0px 0px 1px 0px #091E424F;
     box-shadow: 0px 3px 5px 0px #091E4233;
-    
 }
+
