--- a/src/components/shared/ui/Button/Button.module.scss
+++ b/src/components/shared/ui/Button/Button.module.scss
@@ -10,6 +10,8 @@
     color: #FFFFFF;
     border: none;
     border-radius: 3px;
+    cursor: pointer;
+
 }
 
 .default { 
@@ -25,7 +27,7 @@
     font-size: 14px;
     font-weight: 600;
     height: 48px;
-    min-width: 170px;
+    max-width: 170px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
