--- a/src/components/shared/ui/DropDown/DropDown.module.scss
+++ b/src/components/shared/ui/DropDown/DropDown.module.scss
@@ -2,11 +2,31 @@
 
 .container {
     font-family: $font-family-compact;
-    font-size: 12px;
-    margin-top: 8px;
-    height: auto;
-    width: 210px;
+    font-size: 12px;   
+    cursor: pointer;
+    position: relative;
+    
+    .drop_down_button {
+        height: 100%;
+        width: 100%;
+    }
+
+    .list {
+        margin-top: 5px;
+        right: 1px;
+        position: absolute;
+        z-index: 100;
+        background-color: #FFFFFF;
     box-shadow: 0px 0px 1px 0px #091E424F;
     box-shadow: 0px 3px 5px 0px #091E4233;
-}
 
+    &.above {
+        margin-top: 5px;
+        right: 1px;
+    }
+
+    &.below {
+        bottom: 35px;
+    }
+    }
+}
