--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -7,18 +7,16 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   gap: 5px;
-  margin: 10px;
-  position: relative;
+
 
   .table_container {
     display: flex;
-    margin-left: 114px;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     gap: 20px;
 
     .form_container {
-      width: 100%;
+      width: 870px;
       max-width: auto;
       display: flex;
       justify-content: space-between;
@@ -39,33 +37,15 @@
       gap: 20px;
     }
 
-    .paginationContainer {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
   }
-
   .paginationContainer {
     margin-top: 20px;
   }
 
   .packer_container {
-    margin: 0;
+    margin: 0 10px 0 0;
     display: flex;
     flex-direction: column;
-    .packer { 
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      margin-top: 40px;
-
-      .primaryButtonContainer {
-        display: flex;
-        justify-content: flex-end;
-        position: relative;
-      }
-    }
+    gap: 40px;
   }
-}
+} 
