--- a/src/components/product/productDropDownItem/ProductDropDownItem.module.scss
+++ b/src/components/product/productDropDownItem/ProductDropDownItem.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/global.scss";
+@import "../../../styles/templates.scss";
 
 .container {
     font-family: $font-family-compact;
@@ -32,11 +33,15 @@
         .amount {
             width: 30px;
             height: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @extend %flex-center;
             color: blue;
 
         }
+    }
+
+    .price {
+        max-width: 50px;
+        @extend %flex-center;
+        height: 20px;
     }
 }
