--- a/src/components/shared/ui/DropDown/DropDown.module.scss
+++ b/src/components/shared/ui/DropDown/DropDown.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/global.scss";
+@import "../../../../styles//templates.scss";
 
 .container {
     font-family: $font-family-compact;
@@ -26,6 +27,11 @@
 
     &.below {
         bottom: 35px;
+    }
+
+    &.scroll {
+        overflow-y: scroll;
+        @extend %custom-scrollbar;
     }
     }
 }
