--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -2,7 +2,7 @@
 
 
 .container {
-  margin-top: 5px;
+  padding: 40px 32px 52px 32px;
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
