--- a/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
+++ b/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
@@ -10,6 +10,13 @@
     font-size: 14px;
     color: #7A869A;   
 
+    .label_container{ 
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .drop_container {
        width: 224px;
     }
