--- a/src/pages/PackerPage/PackerPage.module.scss
+++ b/src/pages/PackerPage/PackerPage.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   padding: 40px 32px 52px 32px;
-  width: 100%;
+  width: 100wh;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
