add orderinfo container and delivery container

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,7 @@
+@import "./styles//global.scss";
 .container { 
+    font-family: $font-family-compact;
+    font-size: 14px;
     height: 100vh;
     display: flex;
 
