--- a/src/components/order/CreateOrderForm/CreateOrder.module.scss
+++ b/src/components/order/CreateOrderForm/CreateOrder.module.scss
@@ -1,12 +1,18 @@
+@import "../../../styles/templates.scss";
+
 .container { 
+width: 390px;
+height: 100%;
 display: flex;
 flex-direction: column;
 justify-content: flex-start;
-width: 420px;
 padding: 30px 15px 30px 15px;
 
 .wrapper{
-    width: 360px;
+    height: 100%;
+    width: 100%;
+    min-width: 300px;
+    max-width: 500px;
 }
 
 .source_tag_container {
@@ -20,5 +26,12 @@ padding: 30px 15px 30px 15px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    .buttons_container {
+        margin-top: 10px;
+        width: 100%;
+        @extend %flex-center;
+        gap: 30px;
+    }
 }
 }
