--- a/src/components/product/addProductDropDown/AddProductsDropDown.module.scss
+++ b/src/components/product/addProductDropDown/AddProductsDropDown.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: -20px;
 }
 .products_list {
    width: 100%;
@@ -18,8 +19,8 @@
 .buttons_container {
     display: flex;
     padding: 16px 8px;
-    align-items: center;
-    justify-content: flex-end;
+    align-items: start;
+    justify-content: center;
     gap: 20px;
     border-top: 1px solid #DFE1E6;
 
@@ -44,5 +45,9 @@
   }
 
   .button_container {
-    width: 100%c;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
