--- a/src/components/order/Delivery/Post/Post.module.scss
+++ b/src/components/order/Delivery/Post/Post.module.scss
@@ -1,9 +1,17 @@
 
 .container {
-    width: 300px;
+    width: 250px;
     height: 100%;
     background-color: #FFFBFA;
     padding: 30px 0 30px 0;
+
+    .resizeHandle {
+        position: absolute;
+        top: 0;
+        width: 10px;
+        height: 100%;
+        cursor: col-resize;
+      }
 
     .buttons_container {
         fill: white;
