--- a/src/components/order/OrderInfo/OrderInfo.module.scss
+++ b/src/components/order/OrderInfo/OrderInfo.module.scss
@@ -1,19 +1,34 @@
-
+@import "../../../styles/templates.scss";
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #F5F9FF;
     padding: 30px 15px 30px 15px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    flex-direction: column;
+    gap: 20px;
     
-
     .buttons_container {
         width: 100%;
         height: 48px;
         display: flex;
         justify-content: space-evenly;
         gap: 10px;
+    }
+    .note_container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    }
+
+    .notes_container{ 
+        padding: 2px 5px 2px 1px;
+       display: flex;
+       flex-direction: column-reverse;
+       gap: 10px;
+       max-height: 80vh;
+       overflow-x: scroll;
+       @extend %custom-scrollbar;
     }
 }
