--- a/src/components/product/addProductDropDown/AddProductsDropDown.module.scss
+++ b/src/components/product/addProductDropDown/AddProductsDropDown.module.scss
@@ -9,8 +9,6 @@
     margin-bottom: -20px;
 }
 .products_list {
-   width: 100%;
-   min-width: 370px;
     max-height: 275px;
     overflow-y: scroll;
     @extend %custom-scrollbar
@@ -19,7 +17,7 @@
 .buttons_container {
     display: flex;
     padding: 16px 8px;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     gap: 20px;
     border-top: 1px solid #DFE1E6;
@@ -31,18 +29,6 @@
     z-index: 1000; 
 }
 
-.overlay_active {
-    overflow: hidden; 
-    overflow-y: auto; 
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(245, 244, 244, 0.5);
-    transition: opacity 0.3s;
-    z-index: 998; 
-  }
 
   .button_container {
     width: 100%;
