--- a/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
+++ b/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
     font-family: $font-family-compact;
     font-size: 14px;
     color: #7A869A;   
@@ -18,6 +18,6 @@
     }
 
     .drop_container {
-       width: 224px;
+       width: 70%;
     }
 }
