--- a/src/components/order/Additionalnformation/Additionalnformation.module.scss
+++ b/src/components/order/Additionalnformation/Additionalnformation.module.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/global.scss";
 .container {
     width: 100%;
+    height: 100%;
     display: flex;
     height: auto;
     line-height: 17px;
