--- a/src/components/order/Delivery/Post/Post.module.scss
+++ b/src/components/order/Delivery/Post/Post.module.scss
@@ -1,9 +1,10 @@
 
 .container {
-    width: 250px;
+    width: 100%;
     height: 100%;
     background-color: #FFFBFA;
     padding: 30px 0 30px 0;
+    margin-left: 30px;
 
     .resizeHandle {
         position: absolute;
