--- a/src/components/order/OrderInfo/OrderInfo.module.scss
+++ b/src/components/order/OrderInfo/OrderInfo.module.scss
@@ -1,4 +1,6 @@
 @import "../../../styles/templates.scss";
+@import "../../../styles/global.scss";
+
 .container {
     width: 100%;
     height: 100%;
@@ -6,8 +8,7 @@
     padding: 30px 15px 30px 15px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    
+    gap: 20px;   
     .buttons_container {
         width: 100%;
         height: 48px;
@@ -15,20 +16,13 @@
         justify-content: space-evenly;
         gap: 10px;
     }
-    .note_container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+
+    .notations {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
     }
 
-    .notes_container{ 
-        padding: 2px 5px 2px 1px;
-       display: flex;
-       flex-direction: column-reverse;
-       gap: 10px;
-       max-height: 80vh;
-       overflow-x: scroll;
-       @extend %custom-scrollbar;
-    }
+   
+     
 }
