--- a/src/components/order/OrderInfo/SwitchInfoButton/SwitchInfoButton.module.scss
+++ b/src/components/order/OrderInfo/SwitchInfoButton/SwitchInfoButton.module.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/templates.scss";
 
 .container {
-    width: max-content;
+    width: 100%;
     height: 100%;
     font-size: 14px;
     padding: 0 12px 0 12px;
