--- a/src/components/shared/Resize.module.scss
+++ b/src/components/shared/Resize.module.scss
@@ -1,7 +1,21 @@
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .resizeHandle {
+  position: absolute;
+  top: 0;
+  width: 10px;
+  height: 100%;
+  cursor: col-resize;
+
+  &.right {
     position: absolute;
-    top: 0;
-    width: 10px;
-    height: 100%;
-    cursor: col-resize;
+  top: 0;
+  width: 10px;
+  height: 100%;
+  cursor: col-resize;
+     right: 0;
+  }
   }
