add components for post

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,6 +3,7 @@
     font-family: $font-family-compact;
     font-size: 14px;
     height: 100vh;
+    width: 100vw;
     display: flex;
 
     .content_container {
