--- a/src/components/order/Delivery/Post/Post.module.scss
+++ b/src/components/order/Delivery/Post/Post.module.scss
@@ -3,20 +3,12 @@
     width: 100%;
     height: 100%;
     background-color: #FFFBFA;
-    padding: 30px 0 30px 0;
-    margin-left: 30px;
-
-    .resizeHandle {
-        position: absolute;
-        top: 0;
-        width: 10px;
-        height: 100%;
-        cursor: col-resize;
-      }
+    margin: 0 0 0 30px;
 
     .buttons_container {
         fill: white;
-
+        padding: 30px 20px 10px 20px;
+        border-bottom: 2px solid #EBECF0;
         .post {
             padding: 10px;
             background-color: #DA291C;
