add order info and scroll to notes

--- a/src/components/order/OrderInfo/Note/Note.module.scss
+++ b/src/components/order/OrderInfo/Note/Note.module.scss
@@ -22,6 +22,8 @@
     resize: none;
     outline: none;
     border: none;
+    max-height: 75vh;
+    overflow-y: scroll;
 
     &:focus {
         outline: 1px solid #4C9AFF;
