--- a/src/components/order/Delivery/Post/Post.module.scss
+++ b/src/components/order/Delivery/Post/Post.module.scss
@@ -4,6 +4,8 @@
     height: 100%;
     background-color: #FFFBFA;
     margin: 0 0 0 30px;
+    display: flex;
+    flex-direction: column;
 
     .buttons_container {
         fill: white;
