--- a/src/components/order/Delivery/Post/PostComponentContainer/PostComponentContainer.module.scss
+++ b/src/components/order/Delivery/Post/PostComponentContainer/PostComponentContainer.module.scss
@@ -7,4 +7,12 @@
     justify-content: space-between;
     background-color: #ffff;
     border-bottom: 1px solid  #EBECF0;
+
+    &.open {
+        box-shadow: 0px 4px 0px 0px #00000033;
+
+    }
+    .open_icon {
+        transform: rotate(90deg);
+    }
 }
